# hematopoiesis-queueing

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
docs/: research_plan.md  technical_scaffold.md
notebooks/: 01_explore_weinreb.ipynb  02_state_discretization_check.ipynb  03_gamma_fit_diagnostics.ipynb  04_bottleneck_results.ipynb
results/: synthetic_sweep_results.csv
scripts/: download_nestorowa.py  download_weinreb.py  generate_figures.py  run_pipeline_nestorowa.py  run_pipeline_weinreb.py  run_synthetic_sweep.py
src/queuediff/: __init__.py  bottleneck_diagnostics.py  branch_point_validation.py  clonal_residence_time.py  data_loading.py  distribution_fitting.py  flux_residence_time.py  model_comparison.py  queueing_network.py  recovery_validation.py  resolution_sensitivity.py  schema_mapping.py  state_discretization.py  structural_crosscheck.py  synthetic_generator.py
tests/: conftest.py  test_bottleneck_diagnostics.py  test_branch_point_validation.py  test_clonal_residence_time.py  test_data_loading.py  test_distribution_fitting.py  test_flux_residence_time.py  test_model_comparison.py  test_pipeline_integration.py  test_queueing_network.py  test_recovery_validation.py  test_schema_mapping.py  test_state_discretization.py  test_structural_crosscheck.py  test_synthetic_generator.py
