[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuediff"
version = "0.1.0"
description = "Semi-Markov queueing network inference for hematopoietic differentiation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scanpy==1.12.2",
    "anndata==0.12.19",
    "leidenalg==0.12.0",
    "igraph==1.0.0",
    "numpy==2.4.4",
    "pandas==2.3.3",
    "numba>=0.63.0",
    "lifelines==0.30.3",
    "scipy==1.18.0",
    "statsmodels==0.14.6",
    "networkx==3.6.1",
    "matplotlib>=3.10,<3.11",
    "seaborn==0.13.2",
    "plotly==6.9.0",
    "scikit-misc==0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "jupyter==1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["queuediff*"]