[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuediff"
version = "0.1.0"
description = "Semi-Markov queueing network analysis of hematopoietic differentiation"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.9",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "networkx>=3.1",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "leidenalg>=0.10",
    "igraph>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
